改用 @types/morris.js 模組定義檔 (TypeScript)
https://www.npmjs.com/package/@types/morris.js

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,7 +4,8 @@
     "outDir": "../out-tsc/app",
     "types": [
       "jquery",
-      "datatables.net"
+      "datatables.net",
+      "morris.js"
     ]
   },
   "exclude": [
