--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~7.0.0",
     "@types/datatables.net": "^1.10.13",
     "@types/jquery": "^3.3.22",
+    "@types/morris.js": "^0.5.7",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
